Fix example top bar visibility

--- a/examples/src/index.css
+++ b/examples/src/index.css
@@ -8,7 +8,7 @@ body {
 nav {
 	position: sticky;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 
 	box-sizing: border-box;
 	display: flex;
